--- a/Products/PluginRegistry/CHANGES.txt
+++ b/Products/PluginRegistry/CHANGES.txt
@@ -1,5 +1,10 @@
 PluginRegistry Product Changelog
 
+  PluginRegistry 1.2 (unreleased)
+  
+    - Fix bad behaviour when moving the top plugin up.
+      (https://bugs.launchpad.net/bugs/164717)
+
   PluginRegistry 1.1.2 (2007/04/24)
 
     - Drop previously-activated plugins from the list returned from
