--- a/Products/PluginRegistry/CHANGES.txt
+++ b/Products/PluginRegistry/CHANGES.txt
@@ -1,5 +1,9 @@
 PluginRegistry Product Changelog
 
+  PluginRegistry 1.1.3.1 (2007/12/07)
+  
+    - Packaging bug:  egg lacked package data.
+
   PluginRegistry 1.1.3 (2007/11/28)
   
     - Fix bad behaviour when moving the top plugin up.
