--- a/Products/PluginRegistry/CHANGES.txt
+++ b/Products/PluginRegistry/CHANGES.txt
@@ -1,76 +1,93 @@
 PluginRegistry Product Changelog
+================================
 
-  PluginRegistry 1.1.3.1 (2007/12/07)
-  
-    - Packaging bug:  egg lacked package data.
+PluginRegistry 1.1.3.1 (2007-12-07)
+-----------------------------------
 
-  PluginRegistry 1.1.3 (2007/11/28)
-  
-    - Fix bad behaviour when moving the top plugin up.
-      (https://bugs.launchpad.net/bugs/164717)
+- Packaging bug:  egg lacked package data.
 
-  PluginRegistry 1.1.2 (2007/04/24)
 
-    - Drop previously-activated plugins from the list returned from
-      'listPlugins' when they no longer implement the plugin interface.
-      (http://www.zope.org/Collectors/PAS/53)
+PluginRegistry 1.1.3 (2007-11-28)
+---------------------------------
 
-    - Skip adding duplicate interfaces during non-purge import.
-      (http://www.zope.org/Collectors/PAS/52)
+- Fix bad behaviour when moving the top plugin up.
+  (https://bugs.launchpad.net/bugs/164717)
 
-    - Fixed test breakage on Zope 2.10.
 
-  PluginRegistry 1.1.1 (2006/07/25)
+PluginRegistry 1.1.2 (2007-04-24)
+---------------------------------
 
-    - Added workaround for autogen factories which assume they can
-      pass an ID to the registry's '__init__'.  In particular, this
-      allows the registry to be created and popluated as a "normal"
-      content object using GenericSetup.
+- Drop previously-activated plugins from the list returned from
+  'listPlugins' when they no longer implement the plugin interface.
+  (http://www.zope.org/Collectors/PAS/53)
 
-    - Improved BBB for testing under Zope 2.8.
+- Skip adding duplicate interfaces during non-purge import.
+  (http://www.zope.org/Collectors/PAS/52)
 
-  PluginRegistry 1.1 (2006/02/25)
+- Fixed test breakage on Zope 2.10.
 
-    - SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.1
 
-    - Moved interfaces into a top-level module (no need for a package),
-      and made them forward-compatible with Z3 interfaces.
+PluginRegistry 1.1.1 (2006-07-25)
+---------------------------------
 
-    - Wired in DAV / FTP / ExternalEditor support for the registry,
-      along with a ZMI form for updating it as XML.
- 
-    - Added support for exporting / importing registry via GenericSetup.
+- Added workaround for autogen factories which assume they can
+  pass an ID to the registry's '__init__'.  In particular, this
+  allows the registry to be created and popluated as a "normal"
+  content object using GenericSetup.
 
-    - Moved from CVS to subversion (2005/10/14).
+- Improved BBB for testing under Zope 2.8.
 
-    - Removed deprecation warings under Zope 2.8.x.
 
-    - Repaired warings appearing in Zope 2.8.5 due to a couple typos
-      in security declarations.
+PluginRegistry 1.1 (2006-02-25)
+-------------------------------
 
-  PluginRegistry-1.0.2 (2005/01/31)
+- SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.1
 
-    - SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0.2
+- Moved interfaces into a top-level module (no need for a package),
+  and made them forward-compatible with Z3 interfaces.
 
-    - CVS tag:  PluginRegistry-1_0_2
+- Wired in DAV / FTP / ExternalEditor support for the registry,
+  along with a ZMI form for updating it as XML.
 
-    - Simplified package directory computation using 'package_home'.
+- Added support for exporting / importing registry via GenericSetup.
 
-    - Added 'test_suite' to registry tests to improve testability under
-      'zopectl test'.
+- Moved from CVS to subversion (2005-10-14).
 
-  PluginRegistry-1.0.1 (2004/04/28)
+- Removed deprecation warings under Zope 2.8.x.
 
-    - SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0.1
+- Repaired warings appearing in Zope 2.8.5 due to a couple typos
+  in security declarations.
 
-    - CVS tag:  PluginRegistry-1_0_1
 
-    - Initial public release.
+PluginRegistry-1.0.2 (2005-01-31)
+---------------------------------
 
-  PluginRegistry-1.0 (2004/04/28)
+- SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0.2
 
-    - SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0
+- CVS tag:  PluginRegistry-1_0_2
 
-    - CVS tag:  PluginRegistry-1_0
+- Simplified package directory computation using 'package_home'.
 
-    - Vendor import from ZC repository.
+- Added 'test_suite' to registry tests to improve testability under
+  'zopectl test'.
+
+
+PluginRegistry-1.0.1 (2004-04-28)
+---------------------------------
+
+- SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0.1
+
+- CVS tag:  PluginRegistry-1_0_1
+
+- Initial public release.
+
+
+PluginRegistry-1.0 (2004-04-28)
+-------------------------------
+
+  - SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0
+
+  - CVS tag:  PluginRegistry-1_0
+
+  - Vendor import from ZC repository.
+
