--- a/Products/PluginRegistry/CHANGES.txt
+++ b/Products/PluginRegistry/CHANGES.txt
@@ -1,6 +1,12 @@
 PluginRegistry Product Changelog
 ================================
 
+Next Release
+------------
+
+- Fixed plugin management links on the Active screen.
+
+
 PluginRegistry 1.1.3.1 (2007-12-07)
 -----------------------------------
 
