--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,10 @@
-PluginRegistry Product Changelog
-================================
+Change Log
+==========
 
-PluginRegistry 1.2 (unreleased)
--------------------------------
+1.2 (2009-11-15)
+----------------
+
+- Moved documentation out of the product directory.
 
 - Fixed plugin management links on the Active screen.
 
@@ -17,15 +19,15 @@ PluginRegistry 1.2 (unreleased)
   GenericSetup import
 
 
-PluginRegistry 1.1.3 (2007-11-28)
----------------------------------
+1.1.3 (2007-11-28)
+------------------
 
 - Fix bad behaviour when moving the top plugin up.
   (https://bugs.launchpad.net/bugs/164717)
 
 
-PluginRegistry 1.1.2 (2007-04-24)
----------------------------------
+1.1.2 (2007-04-24)
+------------------
 
 - Drop previously-activated plugins from the list returned from
   'listPlugins' when they no longer implement the plugin interface.
@@ -37,8 +39,8 @@ PluginRegistry 1.1.2 (2007-04-24)
 - Fixed test breakage on Zope 2.10.
 
 
-PluginRegistry 1.1.1 (2006-07-25)
----------------------------------
+1.1.1 (2006-07-25)
+------------------
 
 - Added workaround for autogen factories which assume they can
   pass an ID to the registry's '__init__'.  In particular, this
@@ -48,10 +50,8 @@ PluginRegistry 1.1.1 (2006-07-25)
 - Improved BBB for testing under Zope 2.8.
 
 
-PluginRegistry 1.1 (2006-02-25)
--------------------------------
-
-- SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.1
+1.1 (2006-02-25)
+----------------
 
 - Moved interfaces into a top-level module (no need for a package),
   and made them forward-compatible with Z3 interfaces.
@@ -69,12 +69,8 @@ PluginRegistry 1.1 (2006-02-25)
   in security declarations.
 
 
-PluginRegistry-1.0.2 (2005-01-31)
----------------------------------
-
-- SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0.2
-
-- CVS tag:  PluginRegistry-1_0_2
+1.0.2 (2005-01-31)
+------------------
 
 - Simplified package directory computation using 'package_home'.
 
@@ -82,22 +78,13 @@ PluginRegistry-1.0.2 (2005-01-31)
   'zopectl test'.
 
 
-PluginRegistry-1.0.1 (2004-04-28)
----------------------------------
-
-- SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0.1
-
-- CVS tag:  PluginRegistry-1_0_1
+1.0.1 (2004-04-28)
+------------------
 
 - Initial public release.
 
 
-PluginRegistry-1.0 (2004-04-28)
--------------------------------
+1.0 (2004-04-28)
+----------------
 
-  - SVN tag:  svn+ssh://svn.zope.org/repos/main/PluginRegistry/tags/1.0
-
-  - CVS tag:  PluginRegistry-1_0
-
-  - Vendor import from ZC repository.
-
+- Vendor import from ZC repository.
