--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,8 +1,10 @@
 Change Log
 ==========
 
-After 1.2
----------
+1.3a1 (unreleased)
+------------------
+
+- No longer depend on zope.app.testing.
 
 - Require Zope >= 2.12.
 
